--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,9 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4.2.1"
+actix-easy-multipart = "2.1.1"
+
 serde = { version = "1.0.145", features = ["derive"] }
 serde_json = "1.0.85"
+
 mysql = "*"
