--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 actix-web = "4.2.1"
 actix-easy-multipart = "2.1.1"
+actix-cors = "0.6.3"
 
 serde = { version = "1.0.145", features = ["derive"] }
 serde_json = "1.0.85"
