--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,6 @@ serde = { version = "1.0.145", features = ["derive"] }
 serde_json = "1.0.85"
 
 mysql = "*"
+
+log = "0.4"
+pretty_env_logger = "0.4.0"
