--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,10 @@ actix-cors = "0.6.3"
 
 serde = { version = "1.0.145", features = ["derive"] }
 serde_json = "1.0.85"
+lazy_static = "1.4.0"
+toml = "0.5.9"
 
-mysql = "*"
+mysql = "22.2.0"
 
 log = "0.4"
 pretty_env_logger = "0.4.0"
