implemented yt-dpl functionality

--- a/api.toml
+++ b/api.toml
@@ -10,3 +10,6 @@ sqlusr = "user"
 sqlpwd = "password"
 #database to use on sql server
 sqldab = "mediaportal"
+
+#yt-dlp output location; DO NOT end folders with a /
+dlpath = "tmp"
