--- a/api.toml
+++ b/api.toml
@@ -1,7 +1,10 @@
 #ip and port for http server
 ip = "0.0.0.0"
 port = 8080
+
+#enable ssl for api
 ssl = true
+#ssl cert and key
 cert ="cert.pem"
 key = "key.pem"
 
